change about bridgy fed

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -84,7 +84,8 @@ const href_list2 = [
     <Header />
     <main class="main">
       <Sidebar />
-      <article class="contents h-entry">
+      <!-- <article class="contents h-entry"> -->
+      <article class="contents">
         {
           heroImage && (
             <img
@@ -99,7 +100,8 @@ const href_list2 = [
             />
           )
         }
-        <h1 class="title p-name">{title}</h1>
+        <!-- <h1 class="title p-name">{title}</h1> -->
+        <h1 class="title">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
           updatedDate && (
