--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -71,8 +71,10 @@ $("img").each((index, elm) => {
     const srcWithoutQuery = src.split("?")[0];
     // fm=webp パラメータ
     const webpQueryParam = "?fm=webp";
-    // classにlazyload,u-photoを追加
-    $(elm).addClass("lazyload u-photo");
+    // // classにlazyload,u-photoを追加
+    // $(elm).addClass("lazyload u-photo");
+    // classにlazyloadを追加
+    $(elm).addClass("lazyload");
     // srcを削除
     $(elm).removeAttr("src");
     // data-srcを設定
@@ -158,7 +160,8 @@ const older = posts.contents[current_index + 1] ?? null;
       </div>
     )
   }
-  <main set:html={content} class="e-content" />
+  <!-- <main set:html={content} class="e-content" /> -->
+  <main set:html={content} />
   <div id="wavebox" class="wavebox">
     <p>もしこの投稿が「いいね！」と思ったら↓のWaveboxから拍手をください</p>
     <a
@@ -173,7 +176,7 @@ const older = posts.contents[current_index + 1] ?? null;
       /></a
     >
   </div>
-  <div style="display: none;">
+  <!-- <div style="display: none;">
     <a class="u-bridgy-fed" href="https://fed.brid.gy/"></a>
     <time
       datetime={new Date(blog.publishedAt)
@@ -188,6 +191,6 @@ const older = posts.contents[current_index + 1] ?? null;
           })
           .replaceAll("/", "-")
       }</time
-    >
+    > -->
   </div>
 </Layout>
