update for bridgy fed

--- a/src/components/BioForBridgyFed.astro
+++ b/src/components/BioForBridgyFed.astro
@@ -12,7 +12,7 @@
   </p>
   <p class="p-note">女子ボクシング系一次創作サイト</p>
   <p style="display:none;">
-    <a href="https://fed.brid.gy/web/vermilion3.xyz" class="u-url"
+    <a href="acct:vermilion3.xyz@vermilion3.xyz" class="u-url"
       >ActivityPubアカウント</a
     >
   </p>
