chore: Update .astro/settings.json and package.json dependencies

--- a/src/components/AccountsLinks.astro
+++ b/src/components/AccountsLinks.astro
@@ -9,7 +9,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.LIT_LINK}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           各種アカウントへのリンク（lit.link）
         </HeaderLink>
@@ -22,7 +22,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.PIXIV}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           pixiv
         </HeaderLink>
@@ -35,7 +35,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.FANBOX}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           FANBOX
         </HeaderLink>
@@ -48,7 +48,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.XFOLIO}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           Xfolio
         </HeaderLink>
@@ -61,7 +61,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.X}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           X
         </HeaderLink>
@@ -74,7 +74,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.THREADS}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           Threads
         </HeaderLink>
@@ -87,7 +87,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.MASTODON}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           Mastodon
         </HeaderLink>
@@ -100,7 +100,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.MISSKEY}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           Misskey
         </HeaderLink>
@@ -113,7 +113,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.BLUESKY}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           Bluesky
         </HeaderLink>
@@ -126,7 +126,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.OLD_SITE}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           旧サイト
         </HeaderLink>
@@ -139,7 +139,7 @@ import HeaderLink from "./HeaderLink.astro";
         <HeaderLink
           href={import.meta.env.DEVIANTART}
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer me"
         >
           DeviantArt
         </HeaderLink>
