--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -82,7 +82,7 @@ const href_list2 = [
     <Header />
     <main class="main">
       <Sidebar />
-      <article class="contents h-entry">
+      <article class="contents">
       <!-- <article class="contents"> -->
         {
           heroImage && (
@@ -98,7 +98,7 @@ const href_list2 = [
             />
           )
         }
-        <h1 class="title p-name">{title}</h1>
+        <h1 class="title">{title}</h1>
         <!-- <h1 class="title">{title}</h1> -->
         {pubDate && <time>{pubDate}</time>}
         {
