--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -71,8 +71,8 @@ $("img").each((index, elm) => {
     const srcWithoutQuery = src.split("?")[0];
     // fm=webp パラメータ
     const webpQueryParam = "?fm=webp";
-    // classにlazyload,u-photoを追加
-    $(elm).addClass("lazyload u-photo");
+    // classにlazyloadを追加
+    $(elm).addClass("lazyload");
     // // classにlazyloadを追加
     // $(elm).addClass("lazyload");
     // srcを削除
@@ -161,7 +161,7 @@ const older = posts.contents[current_index + 1] ?? null;
       </div>
     )
   }
-  <main set:html={content} class="e-content" />
+  <main set:html={content} class="" />
   <!-- <main set:html={content} /> -->
   <div id="wavebox" class="wavebox">
     <p>もしこの投稿が「いいね！」と思ったら↓のWaveboxから拍手をください</p>
