chore: Update dependencies and enhance semantic HTML structure

--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -161,7 +161,7 @@ const older = posts.contents[current_index + 1] ?? null;
       </div>
     )
   }
-  <main set:html={content} class="" />
+  <main set:html={content} class="e-content" />
   <!-- <main set:html={content} /> -->
   <div id="wavebox" class="wavebox">
     <p>もしこの投稿が「いいね！」と思ったら↓のWaveboxから拍手をください</p>
