--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -133,6 +133,16 @@ header h2 {
   text-transform: uppercase;
 }
 
+.nav-links .fediverse-follow-form {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .nav-links a:hover,
 a:focus {
   background-color: #8f8f8f;
