feat: Adjust FediverseFollowForm input size for better responsiveness

--- a/src/components/FediverseFollowForm.astro
+++ b/src/components/FediverseFollowForm.astro
@@ -16,9 +16,9 @@
     required="required"
     placeholder="@you@instance.social"
     title="あなたのFediverseアカウントのアドレス（@xxxx@xxxx）を入力してください"
-    size="14"
     value=""
     data-ms-editor="true"
+    style="width: 90%;"
   />
   <input name="domain" type="hidden" value="vermilion3.xyz" />
   <input name="protocol" type="hidden" value="web" />
