fix: フォームの隠し入力フィールドの名前を修正

--- a/src/components/FediverseFollowForm.astro
+++ b/src/components/FediverseFollowForm.astro
@@ -20,7 +20,7 @@
     data-ms-editor="true"
     style="width: 90%;"
   />
-  <input name="domain" type="hidden" value="vermilion3.xyz" />
+  <input name="id" type="hidden" value="vermilion3.xyz" />
   <input name="protocol" type="hidden" value="web" />
   <button type="submit">フォロー</button>
   <br />
