--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -215,6 +215,7 @@ const older = posts.contents[current_index + 1] ?? null;
       /></a
     >
   </div>
+  <a href="https://www.buymeacoffee.com/gimlet" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
   <div style="display: none;">
     <a class="u-bridgy-fed" href="https://fed.brid.gy/"></a>
     <time
