changed BlogPost.astro and about.md

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -129,7 +129,8 @@ const href_list2 = [
         } -->
         <ShareButtons title={title} />
         <div class="notify">
-          このブログではGoogle Adsenseを使ったアフェリエイト広告を導入しています
+          このブログではGoogle Adsenseを使ったアフェリエイト広告を導入しています<br>
+          Amazonアソシエイト審査中
         </div>
         <hr />
         <slot />
