--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -130,7 +130,7 @@ const href_list2 = [
         <ShareButtons title={title} />
         <div class="notify">
           このブログではGoogle Adsenseを使ったアフェリエイト広告を導入しています<br>
-          Amazonアソシエイト審査中
+          また、このブログはAmazon.co.jpを宣伝しリンクすることによってサイトが紹介料を獲得できる手段を提供することを目的に設定されたアフィリエイトプログラムである、Amazonアソシエイト・プログラムの参加者です。
         </div>
         <hr />
         <slot />
